--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,8 +9,17 @@ html {
   scroll-behavior: smooth;
 }
 
+@font-face {
+  font-family: "Lovelo";
+  src: url('../fonts/Lovelo-Black.woff2') format('woff2'),
+       url('../fonts/Lovelo-Black.woff') format('woff'),
+       url('../fonts/Lovelo-Black.ttf') format('truetype');
+  /* Add more src declarations for different font formats if available */
+  /* Specify the paths to your font files accordingly */
+}
+
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "Lovelo", sans-serif;
   font-weight: normal;
   font-style: normal;
   color: #888;
@@ -48,8 +57,8 @@ button:focus,
 }
 
 .form-check-input:checked {
-  background-color: #ff6b81;
-  border-color: #ff6b81;
+  background-color: #BFDbff;
+  border-color: #BFDbff;
 }
 
 select {
@@ -899,7 +908,7 @@ ol {
   padding-top: 180px;
   z-index: 2;
   text-align: left;
-  background-color: #ff6b81;
+  background-color: #BFDbff;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -1043,7 +1052,7 @@ ol {
   font-weight: 600;
   display: block;
   margin-bottom: 8px;
-  color: #ff6b81;
+  color: #BFDbff;
   text-transform: uppercase;
 }
 
@@ -1118,7 +1127,7 @@ ol {
   bottom: -1px;
   height: 2px;
   width: 50px;
-  background: #ff6b81;
+  background: #BFDbff;
   content: "";
 }
 
@@ -1137,7 +1146,7 @@ ol {
   width: 45px;
   height: 45px;
   line-height: 45px;
-  background: #ff6b81;
+  background: #BFDbff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1234,7 +1243,7 @@ ol {
 
 .pagination .pagination-list li.active a,
 .pagination .pagination-list li:hover a {
-  background: #ff6b81;
+  background: #BFDbff;
   color: #fff;
   border-color: transparent;
 }
@@ -1254,7 +1263,7 @@ ol {
   font-size: 15px;
   font-weight: 600;
   padding: 13px 30px;
-  background-color: #ff6b81;
+  background-color: #BFDbff;
   color: #fff;
   border: none;
   -webkit-transition: 0.2s;
@@ -1319,7 +1328,7 @@ ol {
 
 .button .btn-alt:hover {
   background-color: #fff !important;
-  color: #ff6b81 !important;
+  color: #BFDbff !important;
 }
 
 .align-left {
@@ -1367,7 +1376,7 @@ ol {
   width: 100px;
   height: 100px;
   border-radius: 100%;
-  background: #ff6b81;
+  background: #BFDbff;
   -webkit-animation: preloader-fx 1.6s linear infinite;
   animation: preloader-fx 1.6s linear infinite;
 }
@@ -1439,16 +1448,16 @@ ol {
     border-radius: 6px;
   }
   .header .navbar .navbar-nav .nav-item a:hover {
-    color: #ff6b81 !important;
+    color: #BFDbff !important;
   }
   .header .navbar .navbar-nav .nav-item a.active {
-    color: #ff6b81 !important;
+    color: #BFDbff !important;
   }
   .header .navbar-nav .nav-item {
     margin: 0;
   }
   .header .navbar-nav .nav-item:hover a {
-    color: #ff6b81;
+    color: #BFDbff;
   }
   .header .navbar-nav .nav-item a {
     padding: 12px 16px !important;
@@ -1472,7 +1481,7 @@ ol {
     padding: 12px 12px;
   }
   .header .navbar-nav .nav-item .sub-menu .nav-item a:hover {
-    color: #ff6b81 !important;
+    color: #BFDbff !important;
   }
   .header .navbar-nav .nav-item a {
     color: #051441;
@@ -1490,7 +1499,7 @@ ol {
   }
   .header .navbar-nav .nav-item .sub-menu li.active {
     background: #fff !important;
-    color: #ff6b81 !important;
+    color: #BFDbff !important;
   }
   .header .navbar-nav .nav-item .sub-menu .nav-item {
     margin: 0 !important;
@@ -1500,13 +1509,13 @@ ol {
   }
   .header .navbar-nav .nav-item .sub-menu li:hover {
     background: #fff !important;
-    color: #ff6b81 !important;
+    color: #BFDbff !important;
   }
   .header .navbar-nav .nav-item a {
     font-size: 14px;
   }
   .header .navbar-nav .nav-item a:hover {
-    color: #ff6b81;
+    color: #BFDbff;
   }
 }
 
@@ -1533,16 +1542,16 @@ ol {
     border-radius: 6px;
   }
   .header .navbar .navbar-nav .nav-item a:hover {
-    color: #ff6b81 !important;
+    color: #BFDbff !important;
   }
   .header .navbar .navbar-nav .nav-item a.active {
-    color: #ff6b81 !important;
+    color: #BFDbff !important;
   }
   .header .navbar-nav .nav-item {
     margin: 0;
   }
   .header .navbar-nav .nav-item:hover a {
-    color: #ff6b81;
+    color: #BFDbff;
   }
   .header .navbar-nav .nav-item a {
     padding: 12px 16px !important;
@@ -1566,7 +1575,7 @@ ol {
     padding: 12px 12px;
   }
   .header .navbar-nav .nav-item .sub-menu .nav-item a:hover {
-    color: #ff6b81 !important;
+    color: #BFDbff !important;
   }
   .header .navbar-nav .nav-item a {
     color: #051441;
@@ -1584,7 +1593,7 @@ ol {
   }
   .header .navbar-nav .nav-item .sub-menu li.active {
     background: #fff !important;
-    color: #ff6b81 !important;
+    color: #BFDbff !important;
   }
   .header .navbar-nav .nav-item .sub-menu .nav-item {
     margin: 0 !important;
@@ -1594,13 +1603,13 @@ ol {
   }
   .header .navbar-nav .nav-item .sub-menu li:hover {
     background: #fff !important;
-    color: #ff6b81 !important;
+    color: #BFDbff !important;
   }
   .header .navbar-nav .nav-item a {
     font-size: 14px;
   }
   .header .navbar-nav .nav-item a:hover {
-    color: #ff6b81;
+    color: #BFDbff;
   }
 }
 
@@ -1619,7 +1628,7 @@ ol {
 
 .header .button .btn:hover {
   background-color: #fff;
-  color: #ff6b81;
+  color: #BFDbff;
 }
 
 .header .navbar-brand img {
@@ -1649,7 +1658,7 @@ ol {
 }
 
 .header.sticky .button .btn {
-  background-color: #ff6b81;
+  background-color: #BFDbff;
   color: #fff;
   border-color: transparent;
 }
@@ -1681,7 +1690,7 @@ ol {
 }
 
 .sticky .navbar .navbar-nav .nav-item a.active {
-  color: #ff6b81;
+  color: #BFDbff;
 }
 
 .sticky .navbar .navbar-nav .nav-item a {
@@ -1712,7 +1721,7 @@ ol {
 .navbar-area.sticky {
   position: fixed;
   z-index: 99;
-  background: #ff6b81;
+  background: #BFDbff;
   -webkit-box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
           box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
   -webkit-transition: all 0.3s ease-out 0s;
@@ -1786,7 +1795,7 @@ ol {
 }
 
 .sticky .navbar-nav .nav-item:hover a {
-  color: #ff6b81;
+  color: #BFDbff;
 }
 
 .navbar-nav .nav-item a {
@@ -1915,7 +1924,7 @@ ol {
 }
 
 .navbar-nav .nav-item .sub-menu .nav-item a:hover {
-  color: #ff6b81;
+  color: #BFDbff;
 }
 
 .navbar-nav .nav-item .sub-menu.left-menu {
@@ -1942,7 +1951,7 @@ ol {
 }
 
 .navbar-nav .nav-item .sub-menu > li.active > a {
-  color: #ff6b81 !important;
+  color: #BFDbff !important;
 }
 
 .navbar-nav .nav-item .sub-menu > li > a {
@@ -2041,8 +2050,8 @@ ol {
 }
 
 .hero-area .hero-content .button .btn {
-  background-color: #fff;
-  color: #ff6b81;
+  background-color: #fff2;
+  color: #BFDbff;
   margin-right: 12px;
 }
 
@@ -2062,7 +2071,7 @@ ol {
 
 .hero-area .hero-content .button .btn.btn-alt:hover {
   background-color: #fff;
-  color: #ff6b81;
+  color: #BFDbff;
 }
 
 @media (max-width: 767px) {
@@ -2088,7 +2097,7 @@ ol {
   width: 50px;
   line-height: 50px;
   text-align: center;
-  color: #ff6b81;
+  color: #BFDbff;
   background-color: #fff;
   border-radius: 50%;
   margin-left: 10px;
@@ -2244,7 +2253,7 @@ ol {
   line-height: 60px;
   text-align: center;
   display: inline-block;
-  background-color: #ff6b81;
+  background-color: #BFDbff;
   color: #fff;
   font-size: 20px;
   border-radius: 7px;
@@ -2267,7 +2276,7 @@ ol {
     Our Achievement CSS
 ========================================*/
 .our-achievement {
-  background-color: #ff6b81;
+  background-color: #BFDbff;
   text-align: center;
   padding: 130px 0;
 }
@@ -2405,7 +2414,7 @@ ol {
 }
 
 .pricing-table .single-table .table-head .button .btn:hover {
-  background-color: #ff6b81;
+  background-color: #BFDbff;
   color: #fff;
 }
 
@@ -2432,7 +2441,7 @@ ol {
 }
 
 .pricing-table .single-table .table-content .table-list li i {
-  color: #ff6b81;
+  color: #BFDbff;
   font-size: 14px;
   position: absolute;
   left: 0;
@@ -2449,7 +2458,7 @@ ol {
     Call To Action CSS
 ========================================*/
 .call-action {
-  background-color: #ff6b81;
+  background-color: #BFDbff;
 }
 
 .call-action .cta-content {
@@ -2514,7 +2523,7 @@ ol {
 
 .call-action .cta-content .button .btn {
   background-color: #fff;
-  color: #ff6b81;
+  color: #BFDbff;
 }
 
 .call-action .cta-content .button .btn:hover {
@@ -2554,7 +2563,7 @@ ol {
 
 .error-area .error-content h1 {
   font-size: 100px;
-  color: #ff6b81;
+  color: #BFDbff;
   margin-bottom: 25px;
   font-weight: 800;
   line-height: 100px;
@@ -2689,7 +2698,7 @@ ol {
 }
 
 .footer .single-footer.f-about .social li a:hover {
-  color: #ff6b81;
+  color: #BFDbff;
 }
 
 .footer .single-footer.f-about .social li:last-child {
@@ -2713,7 +2722,7 @@ ol {
 }
 
 .footer .single-footer.f-about .copyright-text a:hover {
-  color: #ff6b81;
+  color: #BFDbff;
 }
 
 .footer .single-footer.f-link li {
@@ -2732,7 +2741,7 @@ ol {
 }
 
 .footer .single-footer.f-link li a:hover {
-  color: #ff6b81;
+  color: #BFDbff;
 }
 
 .footer .single-footer h3 {
@@ -2833,7 +2842,7 @@ ol {
 }
 
 .footer .footer-newsletter .title p a {
-  color: #ff6b81;
+  color: #BFDbff;
   text-decoration: underline;
 }
 
@@ -2943,7 +2952,7 @@ ol {
 
 .footer .footer-newsletter .newsletter-form .button .btn {
   display: inline-block;
-  background: #ff6b81;
+  background: #BFDbff;
   color: #fff;
   height: 48px;
   line-height: 48px;
@@ -2955,6 +2964,6 @@ ol {
 }
 
 .footer .footer-newsletter .newsletter-form .button .btn:hover {
-  color: #ff6b81;
+  color: #BFDbff;
   background-color: #fff;
 }
