--- a/assets/css/icons.css
+++ b/assets/css/icons.css
@@ -8,12 +8,12 @@ Version: 4.0
 
 @font-face {
   font-family: 'lineicons';
-  src: url('../fonts/lineicons.eot');
-  src: url('../fonts/lineicons.eot?#iefix') format('embedded-opentype'), /* Add ?#iefix for IE11 support */
-       url('../fonts/lineicons.woff2') format('woff2'),
-       url('../fonts/lineicons.woff') format('woff'),
-       url('../fonts/lineicons.ttf') format('truetype'),
-       url('../fonts/lineicons.svg#lineicons') format('svg'); /* Add #lineicons for better browser support */
+  src: url('https://breastscreeningai.github.io/assets/fonts/lineicons.eot');
+  src: url('https://breastscreeningai.github.io/assets/fonts/lineicons.eot?#iefix') format('embedded-opentype'), /* Add ?#iefix for IE11 support */
+       url('https://breastscreeningai.github.io/assets/fonts/lineicons.woff2') format('woff2'),
+       url('https://breastscreeningai.github.io/assets/fonts/lineicons.woff') format('woff'),
+       url('https://breastscreeningai.github.io/assets/fonts/lineicons.ttf') format('truetype'),
+       url('https://breastscreeningai.github.io/assets/fonts/lineicons.svg#lineicons') format('svg'); /* Add #lineicons for better browser support */
 }
 
 /* base class */
